# SecretNote

./: README.md
grpc_messager_server/grpc_messager_server/: Cargo.toml  build.rs
grpc_messager_server/grpc_messager_server/backap/: Cargo.toml
grpc_messager_server/grpc_messager_server/backap/proto/: testproto.proto
grpc_messager_server/grpc_messager_server/backap/src/: client.rs  server.rs
grpc_messager_server/grpc_messager_server/proto/: testproto.proto
grpc_messager_server/grpc_messager_server/src/: clear_code.rs  client.rs  main.rs  server.rs
secretnote/secretnote/: build.gradle  settings.gradle
secretnote/secretnote/app/: build.gradle  google-services.json
secretnote/secretnote/app/src/main/: AndroidManifest.xml
secretnote/secretnote/app/src/main/proto/: testproto.proto
secretnote/secretnote/app/src/main/res/drawable/: borderedittext.xml  circle.xml  ic_launcher_foreground.xml  logins_serach_text_round.xml  rounded_edittext.xml
secretnote/secretnote/app/src/main/res/layout/: activity_main.xml  activity_test_resycle.xml  app_bar_main.xml  chats_activity.xml  content_main.xml  fragment_add_user_group_chat.xml  fragment_attendees.xml  fragment_chat.xml  fragment_gallery.xml  fragment_home.xml  fragment_import_export_private_key.xml  fragment_login.xml  fragment_protection_access.xml  fragment_register1.xml  fragment_register3.xml  fragment_register4.xml  fragment_register_final.xml  fragment_send_message.xml  fragment_send_message_group.xml  fragment_slideshow.xml  login.xml  (+6 more)
secretnote/secretnote/gradle/wrapper/: gradle-wrapper.properties
(+45 files in other folders)
