[package]
name = "grpc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sserver"
path = "src/server.rs"


[[bin]]
name = "mmain"
path = "src/main.rs"

[[bin]]
name = "clear"
path = "src/clear_code.rs"

[dependencies]
lettre = "0.10.0-beta.1"
rand = "0.8.4"
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "*"
regex = "1.3.1"
futures = "0.3.16"
tokio-stream = "*"
chrono = "0.4"
prost-types = "*"
postgres-types = "0.2.5"
image = "0.23.14"
rustbitmap = "0.1.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
bmp = "0.5"



[dependencies.postgres]
postgres = { version = "0.15.2", features = ["with-chrono"] }
dotenv = "0.15.0"
chrono = "0.4.9"
uuid = { version = "0.8.1", features = ["serde", "v4"] }


[build-dependencies]
tonic-build = "0.7"
